--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### IntelliJ IDEA ###
+# Ignore database properties
+/src/main/resources/db.properties
+
+# ==========================
+# IntelliJ IDEA
+# ==========================
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -12,7 +18,9 @@ target/
 *.iml
 *.ipr
 
-### Eclipse ###
+# ==========================
+# Eclipse
+# ==========================
 .apt_generated
 .classpath
 .factorypath
@@ -21,7 +29,9 @@ target/
 .springBeans
 .sts4-cache
 
-### NetBeans ###
+# ==========================
+# NetBeans
+# ==========================
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -31,8 +41,15 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+# ==========================
+# VS Code
+# ==========================
 .vscode/
 
-### Mac OS ###
+# ==========================
+# Mac OS
+# ==========================
 .DS_Store
+*.log
+*.tmp
+*.bak
