--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version>
+    </dependency>
 
     <!-- MySQL Connector -->
     <dependency>
