--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>javax.mail</artifactId>
+      <version>1.6.2</version>
+    </dependency>
     <!-- Gson for JSON -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
