Refactor architecture to SPA: replaced JSPs with HTML/JS, implemented RESTful Controllers, renamed DAO to Repository layer, and added file-based email service.

--- a/.smarttomcat/reservation-system/conf/catalina.properties
+++ b/.smarttomcat/reservation-system/conf/catalina.properties
@@ -106,7 +106,7 @@ shared.loader=
 # - Common non-Tomcat JARs
 # - Test JARs (JUnit, Cobertura and dependencies)
 tomcat.util.scan.StandardJarScanFilter.jarsToSkip=\
-annotations-api.jar,\
+annotations-com.oceanview.controller.jar,\
 ant-junit*.jar,\
 ant-launcher*.jar,\
 ant*.jar,\
@@ -142,17 +142,17 @@ derby-*.jar,\
 dom4j-*.jar,\
 easymock-*.jar,\
 ecj-*.jar,\
-el-api.jar,\
+el-com.oceanview.controller.jar,\
 geronimo-spec-jaxrpc*.jar,\
 h2*.jar,\
-ha-api-*.jar,\
+ha-com.oceanview.controller-*.jar,\
 hamcrest-*.jar,\
 hibernate*.jar,\
 httpclient*.jar,\
 icu4j-*.jar,\
 jasper-el.jar,\
 jasper.jar,\
-jaspic-api.jar,\
+jaspic-com.oceanview.controller.jar,\
 jaxb-*.jar,\
 jaxen-*.jar,\
 jaxws-rt-*.jar,\
@@ -160,7 +160,7 @@ jdom-*.jar,\
 jetty-*.jar,\
 jmx-tools.jar,\
 jmx.jar,\
-jsp-api.jar,\
+jsp-com.oceanview.controller.jar,\
 jstl.jar,\
 jta*.jar,\
 junit-*.jar,\
@@ -172,12 +172,12 @@ oraclepki.jar,\
 org.hamcrest.core_*.jar,\
 org.junit_*.jar,\
 oro-*.jar,\
-servlet-api-*.jar,\
-servlet-api.jar,\
+servlet-com.oceanview.controller-*.jar,\
+servlet-com.oceanview.controller.jar,\
 slf4j*.jar,\
 taglibs-standard-spec-*.jar,\
 tagsoup-*.jar,\
-tomcat-api.jar,\
+tomcat-com.oceanview.controller.jar,\
 tomcat-coyote.jar,\
 tomcat-dbcp.jar,\
 tomcat-i18n-*.jar,\
@@ -190,7 +190,7 @@ tomcat-util.jar,\
 tomcat-websocket.jar,\
 tools.jar,\
 unboundid-ldapsdk-*.jar,\
-websocket-api.jar,\
+websocket-com.oceanview.controller.jar,\
 wsdl4j*.jar,\
 xercesImpl.jar,\
 xml-apis.jar,\
