--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,13 @@
       <artifactId>javax.mail</artifactId>
       <version>1.6.2</version>
     </dependency>
-
+    <!-- Source: https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.13.2</version>
+      <scope>compile</scope>
+    </dependency>
     <!-- MySQL Connector -->
     <dependency>
       <groupId>mysql</groupId>
