--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
          version="3.1">
 
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>login_app.html</welcome-file>
   </welcome-file-list>
 
   <error-page>
